force-app/main/default/objects/Zip_Code_Area_Assignment__c/Zip_Code_Area_Assignment__c.object-meta.xml
<CustomObject>
    <description>This is a lookup table for Area Assignment. - ZIp Code assignment of Reps to Zips</description>
    <label>Zip Code Area Assignment</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Area Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Code Area Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>