force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This a a lookup to the user.</description>
    <inlineHelpText>This a a lookup to the user.</inlineHelpText>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Area_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>