force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/Assignment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This is the Assignment Effective Date.</description>
    <inlineHelpText>This is the Assignment Effective Date.</inlineHelpText>
    <label>Assignment Effective Date</label>
    <type>Date</type>
</CustomField>