force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Territory Mapper City</description>
    <inlineHelpText>Territory Mapper City</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>