force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Territory Mapper County Name</description>
    <inlineHelpText>Territory Mapper County Name</inlineHelpText>
    <label>County Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>