force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Territory Mapper District</description>
    <inlineHelpText>Territory Mapper District</inlineHelpText>
    <label>District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>