force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is an active checkbox</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>