force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/IsIncluded__c.field-meta.xml
<CustomField>
    <fullName>IsIncluded__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is an Isincluded checkbox.</description>
    <label>IsIncluded</label>
    <type>Checkbox</type>
</CustomField>