force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This is the role.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISM</fullName>
            </value>
            <value>
                <fullName>NAM</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>TSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>