force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory Mapper Territory Description</description>
    <inlineHelpText>Territory Mapper Territory Description</inlineHelpText>
    <label>Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>