force-app/main/default/objects/Zip_Code_Area_Assignment__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <externalId>true</externalId>
    <label>Zipcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>