force-app/main/default/objects/Zip_Code_Area_Assignment__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <columns>Zipcode__c</columns>
    <columns>State_Name__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zipcode__c</field>
        <operation>equals</operation>
        <value>55906</value>
    </filters>
    <label>Test</label>
</ListView>