force-app/main/default/objects/Zip_Code_Area_Assignment__c/listViews/zip53186.listView-meta.xml
<ListView>
    <fullName>zip53186</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>City__c</columns>
    <columns>State_Name__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zipcode__c</field>
        <operation>equals</operation>
        <value>53186</value>
    </filters>
    <filters>
        <field>Account_Owner__c</field>
        <operation>equals</operation>
        <value>Brian Duernick</value>
    </filters>
    <label>zip 53186</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>